# pdf-extract

./: .gitignore  Cargo.toml  README  README.md  notes
.github/workflows/: rust.yml
examples/: extract.rs  extract_txt_with_page.rs
src/: core_fonts.rs  encodings.rs  error.rs  glyphlist-export.py  glyphlist-extended.txt  glyphnames.rs  lib.rs  main.rs  metrics.rs  winansiencoding.rs  zapfglyphnames.rs
tests/: alternate-color-space.pdf.link  tests.rs
tests/docs/: alternate-color-space.pdf.link  embeded-core-fonts.pdf.link  missing-widths.pdf.link
